# sage

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  harness-spec.md  review.md
.analysis/: EnterPlanModeTool.md  (+20 more)
crates/agent-core/: Cargo.toml
crates/agent-core/src/: agent.rs  agent_loop.rs  bedrock_models.rs  compaction.rs  core_prompt.md  event.rs  lib.rs  proxy.rs  system_prompt.rs  test_helpers.rs  transform.rs  types.rs
crates/agent-core/src/mcp/: client.rs  mod.rs  transport.rs  types.rs
crates/agent-core/src/tools/: backend.rs  bash.rs  craft_manage.rs  edit.rs  find.rs  grep.rs  ls.rs  mcp_tool.rs  mod.rs  policy.rs  read.rs  web_fetch.rs  web_search.rs  write.rs
crates/agent-core/tests/: bedrock_models.rs  e2e.rs
crates/ai/: Cargo.toml
crates/ai/src/: bedrock_provider.rs  cli.rs  keys.rs  lib.rs  model_pricing.rs  models.rs  openai_compat.rs  provider_errors.rs  provider_specs.rs  registry.rs  stream.rs  test_helpers.rs  transform.rs  types.rs
crates/ai/src/providers/: anthropic.rs  azure_openai_responses.rs  bedrock.rs  github_copilot_headers.rs  google.rs  google_gemini_cli.rs  google_shared.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  openai_responses_shared.rs  provider_integration_tests.rs  simple_options.rs
crates/ai/src/utils/: event_stream.rs  hash.rs  json_parse.rs  mod.rs  overflow.rs  sanitize_unicode.rs  typebox_helpers.rs  validation.rs
crates/ai/src/utils/oauth/: github_copilot.rs  google_antigravity.rs  mod.rs  oauth_page.rs  openai_codex.rs  pkce.rs  types.rs
crates/caster/: Cargo.toml
crates/caster/src/: main.rs  serve.rs
crates/coding-agent/: Cargo.toml  REVIEW_SUMMARY.md  REVIEW_SUMMARY_UI_COMPONENTS.md  REVIEW_UTILS_SUMMARY.md  review-7files-found.md
crates/coding-agent/src/: agent_session.rs  config.rs  main.rs  migrations.rs  project_onboarding.rs
crates/coding-agent/src/bun/: mod.rs  register_bedrock.rs
crates/coding-agent/src/cli/: args.rs  config_selector.rs  file_processor.rs  initial_message.rs  list_models.rs  mod.rs  session_picker.rs
crates/coding-agent/src/commands/: mod.rs
crates/coding-agent/src/commands/init/: mod.rs
crates/coding-agent/src/core/: agent_session.rs  auth_storage.rs  bash_executor.rs  event_bus.rs  exec.rs  footer_data_provider.rs  keybinding_watcher.rs  keybindings.rs  messages.rs  mod.rs  model_registry.rs  model_resolver.rs  output_guard.rs  package_manager.rs  prompt_templates.rs  resolve_config_value.rs  resource_loader.rs  sdk.rs  session_manager.rs  settings_manager.rs  skills.rs  slash_commands.rs  system_prompt.rs
crates/coding-agent/src/core/agent/: builtin.rs  definition.rs  forked.rs  mod.rs  query_loop.rs  runner.rs
crates/coding-agent/src/core/compaction/: branch_summarization.rs  compaction.rs  mod.rs  utils.rs
crates/coding-agent/src/core/export_html/: ansi_to_html.rs  mod.rs  tool_renderer.rs
crates/coding-agent/src/core/extensions/: loader.rs  mod.rs  runner.rs  types.rs  wrapper.rs
crates/coding-agent/src/core/hooks/: executor.rs  mod.rs  runner.rs  types.rs
crates/coding-agent/src/modes/: mod.rs  print_mode.rs
crates/coding-agent/src/utils/: changelog.rs  clipboard.rs  clipboard_image.rs  clipboard_native.rs  exif_orientation.rs  frontmatter.rs  git.rs  image_convert.rs  image_resize.rs  mime.rs  mod.rs  photon.rs  shell.rs  tools_manager.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: exec.rs  fs.rs  init.rs  main.rs
crates/runner/: Cargo.toml
crates/runner/src/: config.rs  lib.rs  tools.rs
crates/sage-channel-feishu/: Cargo.toml
crates/sage-channel-feishu/src/: lib.rs
crates/sage-cli/: Cargo.toml
crates/sage-cli/src/: chat.rs  context.rs  craft_scorer.rs  daemon.rs  harness.rs  known_models.rs  main.rs  print_session.rs  serve.rs  session_archive.rs  skill_evaluate.rs  skill_install.rs  skill_scorer.rs  skills.rs  triggers.rs  tui.rs  wiki_trigger.rs
crates/sage-cli/src/cli/: args.rs
crates/sage-cli/src/core/: defaults.rs  diagnostics.rs  keybinding_watcher.rs  keybindings.rs  prompt_templates.rs  resolve_config_value.rs  resource_loader.rs  sdk.rs  session_manager.rs  slash_commands.rs  source_info.rs  timings.rs
crates/sage-cli/src/modes/: print_mode.rs
crates/sage-cli/src/templates/: config.yaml  schema.md  skill_evaluation_prompt.md
crates/sage-cli/src/utils/: child_process.rs  clipboard_image.rs  git.rs  image_convert.rs  mime.rs  sleep.rs
crates/sage-guest/: Cargo.toml
crates/sage-guest/src/: exec.rs  fs.rs  init.rs  main.rs  security.rs
crates/sage-protocol/: Cargo.toml
crates/sage-protocol/src/: messages.rs
crates/sage-runner/: Cargo.toml
crates/sage-runner/src/: config.rs  lib.rs  metrics.rs
crates/sage-runner/src/channel/: mod.rs
crates/sage-runner/src/hooks/: mod.rs
crates/sage-runtime/: Cargo.toml
crates/sage-runtime/src/: agent.rs  agent_loop.rs  compaction.rs  core_prompt.md  engine.rs  event.rs  hook.rs  lib.rs  system_prompt.rs  test_helpers.rs  types.rs
crates/sage-runtime/src/llm/: keys.rs  mod.rs  models.rs  openai_compat.rs  provider_errors.rs  provider_specs.rs  registry.rs  stream.rs  transform.rs  types.rs
crates/sage-runtime/src/tools/: backend.rs  bash.rs  craft_manage.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  policy.rs  read.rs  truncate.rs  write.rs
crates/sage-runtime/tests/: workspace_tools_e2e.rs
crates/sage-sandbox/: Cargo.toml
crates/sage-sandbox/src/: builder.rs  error.rs  handle.rs  lib.rs  relay.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: builder.rs  error.rs  handle.rs  lib.rs  relay.rs
crates/tui/: Cargo.toml
crates/tui/src/: autocomplete.rs  editor_component.rs  fuzzy.rs  keybindings.rs  keys.rs  kill_ring.rs  lib.rs  resolver.rs  stdin_buffer.rs  terminal.rs  terminal_image.rs  tui.rs  undo_stack.rs  utils.rs
crates/tui/src/components/: box_component.rs  cancellable_loader.rs  editor.rs  image.rs  input.rs  loader.rs  markdown.rs  mod.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
(+166 files in other folders)
