[workspace]
members = [
    "crates/sage-cli",
    "crates/sage-sandbox",
    "crates/sage-protocol",
    "crates/sage-guest",
    "crates/sage-runner",
    "crates/sage-runtime",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/chasey-myagi/sage"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1"
aws-types = "1"
ciborium = "0.2"              # CBOR encoding for wire protocol
bytes = "1"

# VMM
msb_krun = "0.1"
libc = "0.2"

# Internal crates
sage-protocol = { path = "crates/sage-protocol" }
sage-sandbox = { path = "crates/sage-sandbox" }
sage-runner = { path = "crates/sage-runner" }
sage-runtime = { path = "crates/sage-runtime" }
