[workspace]
members = [
    "crates/ai",
    "crates/agent-core",
    "crates/tui",
    "crates/coding-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/chasey-myagi/sage"

[workspace.dependencies]
# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures = "0.3"
glob = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
async-stream = "0.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
url = "2"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1"
aws-types = "1"
# Testing
serial_test = "3"
tracing-test = "0.2"
tempfile = "3"
ulid = "1"
chrono = "0.4"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

libc = "0.2"
tokio-util = "0.7"
pulldown-cmark = "0.12"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
unicode-normalization = "0.1"
notify = "6"
indexmap = { version = "2", features = ["serde"] }

# Internal crates
ai = { path = "crates/ai" }
agent-core = { path = "crates/agent-core" }
tui = { path = "crates/tui" }
coding-agent = { path = "crates/coding-agent" }
