[package]
name = "agent-guest"
version.workspace = true
edition.workspace = true

[dependencies]
agent-protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
nix = { version = "0.29", features = ["process", "signal", "mount", "fs", "user"] }
