[package]
name = "agent-runner"
version.workspace = true
edition.workspace = true

[dependencies]
agent-sandbox = { workspace = true }
agent-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
