[package]
name = "sage-channel-feishu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Feishu (Lark) channel adapter for Sage — webhook server, signature verification, and card delivery"
keywords = ["feishu", "lark", "channel", "agent", "webhook"]
categories = ["asynchronous"]

[dependencies]
sage-runner = { workspace = true }
sage-runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
axum = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
