[package]
name = "sage-channel-feishu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Feishu (Lark) channel adapter for Sage — webhook server, signature verification, and card delivery"
keywords = ["feishu", "lark", "channel", "agent", "webhook"]
categories = ["asynchronous"]

[dependencies]
sage-runner = { workspace = true }
sage-runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
