[package]
name = "sage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Sage — run, chat, and manage domain-expert agents"
keywords = ["agent", "llm", "cli", "ai", "assistant"]
categories = ["command-line-utilities"]

[[bin]]
name = "sage"
path = "src/main.rs"

[dependencies]
sage-sandbox = { workspace = true }
sage-runner = { workspace = true }
sage-runtime = { workspace = true }
sage-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
regex = { workspace = true }
clap = { version = "4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
