[package]
name = "sage-guest"
version.workspace = true
edition.workspace = true

[dependencies]
sage-protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
nix = { version = "0.29", features = ["process", "signal", "mount", "fs", "user"] }
