[package]
name = "sage-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host↔guest wire protocol (length-prefixed CBOR) for Sage sandbox communication"
keywords = ["protocol", "cbor", "ipc", "sandbox", "agent"]
categories = ["encoding", "network-programming"]

[dependencies]
serde = { workspace = true }
ciborium = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
