[package]
name = "sage-runner"
version.workspace = true
edition.workspace = true

[dependencies]
sage-sandbox = { workspace = true }
sage-protocol = { workspace = true }
sage-runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
