[package]
name = "sage-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent runtime: loop, LLM providers, tools"

[dependencies]
sage-protocol = { workspace = true }
sage-sandbox = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-smithy-types = { workspace = true }
aws-types = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
mockito = "1"
