[package]
name = "sage-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-side microVM sandbox SDK for Sage (msb_krun wrapper)"
publish = false

[dependencies]
sage-protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
msb_krun = { workspace = true }
libc = { workspace = true }

[[bin]]
name = "sandbox-runtime"
path = "src/bin/sandbox_runtime.rs"

[[example]]
name = "minimal-vm"
path = "../../examples/minimal-vm.rs"
